added docs.go, generated swagger.yaml with goswagger
